--- a/Client/Chess/play.ui
+++ b/Client/Chess/play.ui
@@ -68,7 +68,7 @@ border: 8px solid orange;
      <string notr="true">QTableWidget { 
 background-color: #2e2f30;
 gridline-color: white;
-border: 2px solid #fffff;
+border: 2px solid #ffffff;
 color: white
 
 }
@@ -253,7 +253,7 @@ gridline-color: white;
      <string>PLAY</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btnBack">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -284,11 +284,11 @@ background-color: orange; border-radius: 25px;
      </size>
     </property>
    </widget>
-   <widget class="QPushButton" name="rdButton">
+   <widget class="QPushButton" name="btnMM">
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>283</y>
+      <y>330</y>
       <width>161</width>
       <height>71</height>
      </rect>
@@ -321,11 +321,11 @@ MATCHMAKING</string>
      </size>
     </property>
    </widget>
-   <widget class="QPushButton" name="invButton">
+   <widget class="QPushButton" name="btnInvite">
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>180</y>
+      <y>220</y>
       <width>161</width>
       <height>71</height>
      </rect>
@@ -357,8 +357,44 @@ color: white;
      </size>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnRefresh">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>100</y>
+      <width>161</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>15</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton { 
+background-color: #f59701;
+border-radius: 25px; 
+color: white;
+}</string>
+    </property>
+    <property name="text">
+     <string>REFRESH</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>55</height>
+     </size>
+    </property>
+   </widget>
   </widget>
-  <widget class="QFrame" name="frame">
+  <widget class="QFrame" name="frHome">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -367,8 +403,26 @@ color: white;
      <height>750</height>
     </rect>
    </property>
+   <property name="minimumSize">
+    <size>
+     <width>1000</width>
+     <height>750</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>1000</width>
+     <height>750</height>
+    </size>
+   </property>
    <property name="styleSheet">
-    <string notr="true">background-image: url(:/home/assets/home.jpg);</string>
+    <string notr="true">QFrame#frHome{background-image: url(:/home/assets/home.jpg)}
+QPushButton {border: none; 
+text-align: left;
+	font: 33pt &quot;Ubuntu&quot;;
+color: white;
+
+}</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
@@ -376,8 +430,73 @@ color: white;
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>320</y>
+      <width>201</width>
+      <height>351</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QPushButton" name="btnPlay_2">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: none</string>
+       </property>
+       <property name="text">
+        <string>Play</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnHistory_2">
+       <property name="text">
+        <string>History</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnOptions_2">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnQuit_2">
+       <property name="text">
+        <string>Quit</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="lbDim">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>1000</width>
+      <height>750</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0,0,0,0.7)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
-  <zorder>frame</zorder>
+  <zorder>frHome</zorder>
   <zorder>playFrame</zorder>
  </widget>
  <resources>
