--- a/Client/Chess/play.ui
+++ b/Client/Chess/play.ui
@@ -184,7 +184,7 @@ gridline-color: white;
     </column>
     <item row="0" column="0">
      <property name="text">
-      <string>Khoa</string>
+      <string/>
      </property>
      <property name="font">
       <font>
@@ -194,7 +194,7 @@ gridline-color: white;
     </item>
     <item row="1" column="0">
      <property name="text">
-      <string>Tue</string>
+      <string/>
      </property>
      <property name="font">
       <font>
@@ -204,7 +204,7 @@ gridline-color: white;
     </item>
     <item row="2" column="0">
      <property name="text">
-      <string>Quan</string>
+      <string/>
      </property>
      <property name="font">
       <font>
@@ -214,7 +214,7 @@ gridline-color: white;
     </item>
     <item row="3" column="0">
      <property name="text">
-      <string>Chien</string>
+      <string/>
      </property>
      <property name="font">
       <font>
@@ -393,6 +393,27 @@ color: white;
      </size>
     </property>
    </widget>
+   <widget class="QLabel" name="lbNoMM">
+    <property name="geometry">
+     <rect>
+      <x>572</x>
+      <y>410</y>
+      <width>116</width>
+      <height>14</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:white;</string>
+    </property>
+    <property name="text">
+     <string>No match found!</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QFrame" name="frHome">
    <property name="geometry">
@@ -473,7 +494,7 @@ color: white;
      <item>
       <widget class="QPushButton" name="btnQuit_2">
        <property name="text">
-        <string>Quit</string>
+        <string>Logout</string>
        </property>
       </widget>
      </item>
